printing messages to dom

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Toad Talk</title>
+  <link href="https://fonts.googleapis.com/css?family=Mitr|Montserrat|Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
-  <button class="btn btn-dark">Button</button>
   <div id='msgDiv' class='container'></div>
 </body>
 </html>
