--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Toad Talk</title>
 </head>
 <body>
-  <button class="btn btn-dark">Button</button>
+  <div id="messageBar"></div>
+  
 </body>
 </html>
