added gif button and modal div

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="messageBar"></div>
-  
+  <div id='gifModal'></div>
   <div id='msgDiv' class='container'></div>
   <div id="sound"></div>
 </body>
